mini-database/mini-database/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON
    SPACE

Grammar

Rule 0     S' -> Query
Rule 1     Query -> SFW
Rule 2     Query -> CreateStmt
Rule 3     Query -> InsertStmt
Rule 4     Query -> DeleteStmt
Rule 5     Query -> UpdateStmt
Rule 6     Query -> DropStmt
Rule 7     SFW -> SELECT SelList FROM FromList WHERE Cond
Rule 8     SFW -> SELECT SelList FROM FromList
Rule 9     SelList -> TCNAME COMMA SelList
Rule 10    SelList -> TCNAME
Rule 11    SelList -> STAR
Rule 12    FromList -> TCNAME COMMA FromList
Rule 13    FromList -> TCNAME
Rule 14    Cond -> TCNAME EQX CONSTANT
Rule 15    Cond -> Cond AND Cond
Rule 16    CreateStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN
Rule 17    InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN
Rule 18    DeleteStmt -> DELETE FROM TCNAME
Rule 19    UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE Cond
Rule 20    DropStmt -> DROP TABLE TCNAME
Rule 21    FieldDefList -> FieldDef COMMA FieldDefList
Rule 22    FieldDefList -> FieldDef
Rule 23    FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN
Rule 24    FieldDef -> TCNAME INTEGER
Rule 25    ValueList -> CONSTANT COMMA ValueList
Rule 26    ValueList -> CONSTANT

Terminals, with rules where they appear

AND                  : 15
CHAR                 : 23
COMMA                : 9 12 21 25
CONSTANT             : 14 19 23 25 26
CREATE               : 16
DELETE               : 18
DROP                 : 20
EQX                  : 14 19
FROM                 : 7 8 18
INSERT               : 17
INTEGER              : 24
INTO                 : 17
LPAREN               : 16 17 23
RPAREN               : 16 17 23
SELECT               : 7 8
SEMICOLON            : 
SET                  : 19
SPACE                : 
STAR                 : 11
TABLE                : 16 20
TCNAME               : 9 10 12 13 14 16 17 18 19 19 20 23 24
UPDATE               : 19
VALUES               : 17
WHERE                : 7 19
error                : 

Nonterminals, with rules where they appear

Cond                 : 7 15 15 19
CreateStmt           : 2
DeleteStmt           : 4
DropStmt             : 6
FieldDef             : 21 22
FieldDefList         : 16 21
FromList             : 7 8 12
InsertStmt           : 3
Query                : 0
SFW                  : 1
SelList              : 7 8 9
UpdateStmt           : 5
ValueList            : 17 25

Parsing method: LALR

state 0

    (0) S' -> . Query
    (1) Query -> . SFW
    (2) Query -> . CreateStmt
    (3) Query -> . InsertStmt
    (4) Query -> . DeleteStmt
    (5) Query -> . UpdateStmt
    (6) Query -> . DropStmt
    (7) SFW -> . SELECT SelList FROM FromList WHERE Cond
    (8) SFW -> . SELECT SelList FROM FromList
    (16) CreateStmt -> . CREATE TABLE TCNAME LPAREN FieldDefList RPAREN
    (17) InsertStmt -> . INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN
    (18) DeleteStmt -> . DELETE FROM TCNAME
    (19) UpdateStmt -> . UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE Cond
    (20) DropStmt -> . DROP TABLE TCNAME

    SELECT          shift and go to state 8
    CREATE          shift and go to state 9
    INSERT          shift and go to state 10
    DELETE          shift and go to state 11
    UPDATE          shift and go to state 12
    DROP            shift and go to state 13

    Query                          shift and go to state 1
    SFW                            shift and go to state 2
    CreateStmt                     shift and go to state 3
    InsertStmt                     shift and go to state 4
    DeleteStmt                     shift and go to state 5
    UpdateStmt                     shift and go to state 6
    DropStmt                       shift and go to state 7

state 1

    (0) S' -> Query .



state 2

    (1) Query -> SFW .

    $end            reduce using rule 1 (Query -> SFW .)


state 3

    (2) Query -> CreateStmt .

    $end            reduce using rule 2 (Query -> CreateStmt .)


state 4

    (3) Query -> InsertStmt .

    $end            reduce using rule 3 (Query -> InsertStmt .)


state 5

    (4) Query -> DeleteStmt .

    $end            reduce using rule 4 (Query -> DeleteStmt .)


state 6

    (5) Query -> UpdateStmt .

    $end            reduce using rule 5 (Query -> UpdateStmt .)


state 7

    (6) Query -> DropStmt .

    $end            reduce using rule 6 (Query -> DropStmt .)


state 8

    (7) SFW -> SELECT . SelList FROM FromList WHERE Cond
    (8) SFW -> SELECT . SelList FROM FromList
    (9) SelList -> . TCNAME COMMA SelList
    (10) SelList -> . TCNAME
    (11) SelList -> . STAR

    TCNAME          shift and go to state 15
    STAR            shift and go to state 16

    SelList                        shift and go to state 14

state 9

    (16) CreateStmt -> CREATE . TABLE TCNAME LPAREN FieldDefList RPAREN

    TABLE           shift and go to state 17


state 10

    (17) InsertStmt -> INSERT . INTO TCNAME VALUES LPAREN ValueList RPAREN

    INTO            shift and go to state 18


state 11

    (18) DeleteStmt -> DELETE . FROM TCNAME

    FROM            shift and go to state 19


state 12

    (19) UpdateStmt -> UPDATE . TCNAME SET TCNAME EQX CONSTANT WHERE Cond

    TCNAME          shift and go to state 20


state 13

    (20) DropStmt -> DROP . TABLE TCNAME

    TABLE           shift and go to state 21


state 14

    (7) SFW -> SELECT SelList . FROM FromList WHERE Cond
    (8) SFW -> SELECT SelList . FROM FromList

    FROM            shift and go to state 22


state 15

    (9) SelList -> TCNAME . COMMA SelList
    (10) SelList -> TCNAME .

    COMMA           shift and go to state 23
    FROM            reduce using rule 10 (SelList -> TCNAME .)


state 16

    (11) SelList -> STAR .

    FROM            reduce using rule 11 (SelList -> STAR .)


state 17

    (16) CreateStmt -> CREATE TABLE . TCNAME LPAREN FieldDefList RPAREN

    TCNAME          shift and go to state 24


state 18

    (17) InsertStmt -> INSERT INTO . TCNAME VALUES LPAREN ValueList RPAREN

    TCNAME          shift and go to state 25


state 19

    (18) DeleteStmt -> DELETE FROM . TCNAME

    TCNAME          shift and go to state 26


state 20

    (19) UpdateStmt -> UPDATE TCNAME . SET TCNAME EQX CONSTANT WHERE Cond

    SET             shift and go to state 27


state 21

    (20) DropStmt -> DROP TABLE . TCNAME

    TCNAME          shift and go to state 28


state 22

    (7) SFW -> SELECT SelList FROM . FromList WHERE Cond
    (8) SFW -> SELECT SelList FROM . FromList
    (12) FromList -> . TCNAME COMMA FromList
    (13) FromList -> . TCNAME

    TCNAME          shift and go to state 30

    FromList                       shift and go to state 29

state 23

    (9) SelList -> TCNAME COMMA . SelList
    (9) SelList -> . TCNAME COMMA SelList
    (10) SelList -> . TCNAME
    (11) SelList -> . STAR

    TCNAME          shift and go to state 15
    STAR            shift and go to state 16

    SelList                        shift and go to state 31

state 24

    (16) CreateStmt -> CREATE TABLE TCNAME . LPAREN FieldDefList RPAREN

    LPAREN          shift and go to state 32


state 25

    (17) InsertStmt -> INSERT INTO TCNAME . VALUES LPAREN ValueList RPAREN

    VALUES          shift and go to state 33


state 26

    (18) DeleteStmt -> DELETE FROM TCNAME .

    $end            reduce using rule 18 (DeleteStmt -> DELETE FROM TCNAME .)


state 27

    (19) UpdateStmt -> UPDATE TCNAME SET . TCNAME EQX CONSTANT WHERE Cond

    TCNAME          shift and go to state 34


state 28

    (20) DropStmt -> DROP TABLE TCNAME .

    $end            reduce using rule 20 (DropStmt -> DROP TABLE TCNAME .)


state 29

    (7) SFW -> SELECT SelList FROM FromList . WHERE Cond
    (8) SFW -> SELECT SelList FROM FromList .

    WHERE           shift and go to state 35
    $end            reduce using rule 8 (SFW -> SELECT SelList FROM FromList .)


state 30

    (12) FromList -> TCNAME . COMMA FromList
    (13) FromList -> TCNAME .

    COMMA           shift and go to state 36
    WHERE           reduce using rule 13 (FromList -> TCNAME .)
    $end            reduce using rule 13 (FromList -> TCNAME .)


state 31

    (9) SelList -> TCNAME COMMA SelList .

    FROM            reduce using rule 9 (SelList -> TCNAME COMMA SelList .)


state 32

    (16) CreateStmt -> CREATE TABLE TCNAME LPAREN . FieldDefList RPAREN
    (21) FieldDefList -> . FieldDef COMMA FieldDefList
    (22) FieldDefList -> . FieldDef
    (23) FieldDef -> . TCNAME CHAR LPAREN CONSTANT RPAREN
    (24) FieldDef -> . TCNAME INTEGER

    TCNAME          shift and go to state 37

    FieldDefList                   shift and go to state 38
    FieldDef                       shift and go to state 39

state 33

    (17) InsertStmt -> INSERT INTO TCNAME VALUES . LPAREN ValueList RPAREN

    LPAREN          shift and go to state 40


state 34

    (19) UpdateStmt -> UPDATE TCNAME SET TCNAME . EQX CONSTANT WHERE Cond

    EQX             shift and go to state 41


state 35

    (7) SFW -> SELECT SelList FROM FromList WHERE . Cond
    (14) Cond -> . TCNAME EQX CONSTANT
    (15) Cond -> . Cond AND Cond

    TCNAME          shift and go to state 43

    Cond                           shift and go to state 42

state 36

    (12) FromList -> TCNAME COMMA . FromList
    (12) FromList -> . TCNAME COMMA FromList
    (13) FromList -> . TCNAME

    TCNAME          shift and go to state 30

    FromList                       shift and go to state 44

state 37

    (23) FieldDef -> TCNAME . CHAR LPAREN CONSTANT RPAREN
    (24) FieldDef -> TCNAME . INTEGER

    CHAR            shift and go to state 45
    INTEGER         shift and go to state 46


state 38

    (16) CreateStmt -> CREATE TABLE TCNAME LPAREN FieldDefList . RPAREN

    RPAREN          shift and go to state 47


state 39

    (21) FieldDefList -> FieldDef . COMMA FieldDefList
    (22) FieldDefList -> FieldDef .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 22 (FieldDefList -> FieldDef .)


state 40

    (17) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN . ValueList RPAREN
    (25) ValueList -> . CONSTANT COMMA ValueList
    (26) ValueList -> . CONSTANT

    CONSTANT        shift and go to state 50

    ValueList                      shift and go to state 49

state 41

    (19) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX . CONSTANT WHERE Cond

    CONSTANT        shift and go to state 51


state 42

    (7) SFW -> SELECT SelList FROM FromList WHERE Cond .
    (15) Cond -> Cond . AND Cond

    $end            reduce using rule 7 (SFW -> SELECT SelList FROM FromList WHERE Cond .)
    AND             shift and go to state 52


state 43

    (14) Cond -> TCNAME . EQX CONSTANT

    EQX             shift and go to state 53


state 44

    (12) FromList -> TCNAME COMMA FromList .

    WHERE           reduce using rule 12 (FromList -> TCNAME COMMA FromList .)
    $end            reduce using rule 12 (FromList -> TCNAME COMMA FromList .)


state 45

    (23) FieldDef -> TCNAME CHAR . LPAREN CONSTANT RPAREN

    LPAREN          shift and go to state 54


state 46

    (24) FieldDef -> TCNAME INTEGER .

    COMMA           reduce using rule 24 (FieldDef -> TCNAME INTEGER .)
    RPAREN          reduce using rule 24 (FieldDef -> TCNAME INTEGER .)


state 47

    (16) CreateStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN .

    $end            reduce using rule 16 (CreateStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN .)


state 48

    (21) FieldDefList -> FieldDef COMMA . FieldDefList
    (21) FieldDefList -> . FieldDef COMMA FieldDefList
    (22) FieldDefList -> . FieldDef
    (23) FieldDef -> . TCNAME CHAR LPAREN CONSTANT RPAREN
    (24) FieldDef -> . TCNAME INTEGER

    TCNAME          shift and go to state 37

    FieldDef                       shift and go to state 39
    FieldDefList                   shift and go to state 55

state 49

    (17) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList . RPAREN

    RPAREN          shift and go to state 56


state 50

    (25) ValueList -> CONSTANT . COMMA ValueList
    (26) ValueList -> CONSTANT .

    COMMA           shift and go to state 57
    RPAREN          reduce using rule 26 (ValueList -> CONSTANT .)


state 51

    (19) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT . WHERE Cond

    WHERE           shift and go to state 58


state 52

    (15) Cond -> Cond AND . Cond
    (14) Cond -> . TCNAME EQX CONSTANT
    (15) Cond -> . Cond AND Cond

    TCNAME          shift and go to state 43

    Cond                           shift and go to state 59

state 53

    (14) Cond -> TCNAME EQX . CONSTANT

    CONSTANT        shift and go to state 60


state 54

    (23) FieldDef -> TCNAME CHAR LPAREN . CONSTANT RPAREN

    CONSTANT        shift and go to state 61


state 55

    (21) FieldDefList -> FieldDef COMMA FieldDefList .

    RPAREN          reduce using rule 21 (FieldDefList -> FieldDef COMMA FieldDefList .)


state 56

    (17) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN .

    $end            reduce using rule 17 (InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN .)


state 57

    (25) ValueList -> CONSTANT COMMA . ValueList
    (25) ValueList -> . CONSTANT COMMA ValueList
    (26) ValueList -> . CONSTANT

    CONSTANT        shift and go to state 50

    ValueList                      shift and go to state 62

state 58

    (19) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE . Cond
    (14) Cond -> . TCNAME EQX CONSTANT
    (15) Cond -> . Cond AND Cond

    TCNAME          shift and go to state 43

    Cond                           shift and go to state 63

state 59

    (15) Cond -> Cond AND Cond .
    (15) Cond -> Cond . AND Cond

  ! shift/reduce conflict for AND resolved as shift
    $end            reduce using rule 15 (Cond -> Cond AND Cond .)
    AND             shift and go to state 52

  ! AND             [ reduce using rule 15 (Cond -> Cond AND Cond .) ]


state 60

    (14) Cond -> TCNAME EQX CONSTANT .

    AND             reduce using rule 14 (Cond -> TCNAME EQX CONSTANT .)
    $end            reduce using rule 14 (Cond -> TCNAME EQX CONSTANT .)


state 61

    (23) FieldDef -> TCNAME CHAR LPAREN CONSTANT . RPAREN

    RPAREN          shift and go to state 64


state 62

    (25) ValueList -> CONSTANT COMMA ValueList .

    RPAREN          reduce using rule 25 (ValueList -> CONSTANT COMMA ValueList .)


state 63

    (19) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE Cond .
    (15) Cond -> Cond . AND Cond

    $end            reduce using rule 19 (UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE Cond .)
    AND             shift and go to state 52


state 64

    (23) FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .

    COMMA           reduce using rule 23 (FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .)
    RPAREN          reduce using rule 23 (FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for AND in state 59 resolved as shift
